--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </div>
 
     <script>
-        const SERVER_URL = "https://nicegramchek-3.onrender.com";
+        const SERVER_URL = "https://niceteam.onrender.com";
         const tg = window.Telegram.WebApp;
         tg.expand();
 
